Initial checking and push

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@concorde2k/makes",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Makefile snippets",
+  "main": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC"
+  "author": "Concorde, Inc",
+  "license": "NONE"
 }
