--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@concorde2k/makes",
+  "name": "@concorde2k/core.makes",
   "version": "1.0.0",
   "description": "Makefile snippets",
   "main": "",
