--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@concorde2k/core.makes",
-  "version": "1.0.1-dev.15",
+  "version": "1.1.0-prod.0",
   "description": "Makefile snippets",
   "main": "",
   "scripts": {
