--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@concorde2k/core.makes",
-  "version": "1.1.0-dev.0",
+  "version": "1.1.0-stage.0",
   "description": "Makefile snippets",
   "main": "",
   "scripts": {
