prepping for release

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@concorde2k/core.makes",
+  "name": "@terryweiss/maker",
   "version": "1.9.22",
   "description": "Makefile snippets",
   "main": "",
